syntax = "proto3";
package layoutinspector.snapshots;
option java_package = "layoutinspector.snapshots";
option java_multiple_files = true;

import "compose_layout_inspection.proto";
import "view_layout_inspection.proto";

message Snapshot {
   layoutinspector.view.inspection.CaptureSnapshotResponse view_snapshot = 1;

   message ComposeInfo {
     int64 view_id = 1;
     layoutinspector.compose.inspection.GetComposablesResponse composables = 2;
     layoutinspector.compose.inspection.GetAllParametersResponse compose_parameters = 3;
   }
   repeated ComposeInfo compose_info = 2;
}
